--- a/Makefile.in
+++ b/Makefile.in
@@ -91,7 +91,7 @@ FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
 CSRC =	pcap.c gencode.c optimize.c nametoaddr.c etherent.c \
 	fmtutils.c \
-	savefile.c sf-pcap.c sf-pcap-ng.c fopen.c pcap-common.c \
+	savefile.c sf-pcap.c sf-pcapng.c fopen.c pcap-common.c \
 	bpf_image.c bpf_dump.c
 GENSRC = scanner.c grammar.c bpf_filter.c
 LIBOBJS = @LIBOBJS@
@@ -141,7 +141,7 @@ HDR = $(PUBHDR) \
 	ppp.h \
 	rpcap-protocol.h \
 	sf-pcap.h \
-	sf-pcap-ng.h \
+	sf-pcapng.h \
 	sunatmpos.h \
 	varattrs.h
 
