Add a new API to handle some non-select()able devices.
DAG adapters don't support blocking until packets arrive; a program
using select()/poll()/epoll()/kqueue-based event loop must periodically
poll DAG pcap_t's to see if they have packets available.  Add
pcap_get_required_select_timeout(), which returns a pointer to a struct
timeval containing the appropriate timeout interval if polling is
required and NULL if polling isn't required or isn't supported.

Clean up the pcap_get_selectable_fd() documentation while we're at it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1719,6 +1719,7 @@ set(MAN3PCAP_NOEXPAND
 	pcap_fileno.3pcap
 	pcap_findalldevs.3pcap
 	pcap_freecode.3pcap
+	pcap_get_required_select_timeout.3pcap
 	pcap_get_selectable_fd.3pcap
 	pcap_geterr.3pcap
 	pcap_inject.3pcap
